Update RebootInterceptorHook.java